# rust-basic-template

./: Cargo.toml
