[package]
name = "rust-basic-template"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merrymake-service-library = { git = "https://github.com/merrymake/rust-service-library.git", tag = "latest" }

